--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/figolli.html">Figoli</a>
+    <h2>Here is a collection of a few of my favourite recipes!</h2>
+    <ul>
+      <li><a href="recipes/figolli.html">Figolli</a></li>
+    </ul>
   </body>
 </html>
