Delete a html file, add timpana ingredients
'figoli.html' was mispelled. Renamed it 'figolli.html' instead. That
file was committed earlier.

timpana.html was edited to add the list of ingredients in the filling.
h1 for ingreidents added, and h2 added for 'filling'.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>Here is a collection of a few of my favourite recipes!</h2>
     <ul>
       <li><a href="recipes/figolli.html">Figolli</a></li>
+      <li><a href="recipes/pastizzi.html"> Pastizzi</a></li>
     </ul>
   </body>
 </html>
