--- a/recipes/timpana.html
+++ b/recipes/timpana.html
@@ -7,5 +7,30 @@
   </head>
   <body>
     <h1>Timpana</h1>
+    <p>
+      Timpana is a traditional Maltese dish made by baking pasta in a rich meat
+      sauce inside a shortcrust pastry.
+    </p>
+    <h2>Ingredients</h2>
+    <h4>Filling</h4>
+    <ul>
+      <li>3 large, ripe tomatoes</li>
+      <li>1 large onion, finely diced</li>
+      <li>2 cloves garlic, finely chopped</li>
+      <li>1 tbsp olive oil</li>
+      <li>400 gm pork mince</li>
+      <li>100 gm pancetta</li>
+      <li>2 tbsp tomato paste</li>
+      <li>500 ml chicken stock</li>
+      <li>1/2 tsp ground allspice</li>
+      <li>1/4 tsp ground nutmeg</li>
+      <li>salt and pepper to taste</li>
+      <li>180 gm of chicken livers</li>
+      <li>1 1/2 unsalted butter, diced</li>
+      <li>300 gm straight macaroni pasta</li>
+      <li>2 hard boiled eggs, peeled</li>
+      <li>3 eggs</li>
+      <li>80 gm parmesan cheese grated</li>
+    </ul>
   </body>
 </html>
