--- a/recipes/timpana.html
+++ b/recipes/timpana.html
@@ -39,5 +39,66 @@
       <li>1/2 tsp salt</li>
       <li>2 tbsp milk</li>
     </ul>
+    <h1>Steps</h1>
+    <ol>
+      <li>Score the bottom of the tomatoes and grate them on a box grater.</li>
+      <li>
+        Sauté the onion and garlic in the oil in a saucepan over a medium heat
+        for 5 minutes. Add the minced meat and pancetta and cook until the meat
+        has browned and any moisture has evaporated. Add the tomatoes, tomato
+        paste, stock, spices and some salt and pepper and bring to the boil.
+        Cover with a lid and simmer the ragu for 45 minutes. Scrape into a bowl
+        to cool.
+      </li>
+      <li>
+        In a frying pan, sauté the liver in the butter over a medium heat until
+        the pieces are seared all over but still pink in the middle. Season with
+        salt and pepper.
+      </li>
+      <li>
+        Boil the pasta in well-salted water for a few minutes less than the
+        packet recommends. Drain and rinse with cold water to cool the pasta
+        down.
+      </li>
+      <li>
+        Whisk 3 eggs in a large mixing bowl, then stir in the parmesan. Mix in
+        the pasta, followed by the ragu and chicken livers. The pasta should not
+        be as wet as a normal pasta with sauce, but should not be too dry
+        either. Refrigerate until completely chilled
+      </li>
+      <li>
+        While the pasta mixture is chilling, make the pastry. Combine the flour,
+        butter and salt in a bowl and rub together with your fingertips until
+        the mixture resembles breadcrumbs or rough sand.
+      </li>
+      <li>
+        Add the water to create a firm dough. Shape into a ball, then flatten
+        into a disc. Cover in plastic wrap and chill in the refrigerator for 45
+        minutes.
+      </li>
+      <li>
+        Preheat the oven to 180°C and butter a large, tall non-stick springform
+        cake tin (about 10 cm high and 24 cm wide).
+      </li>
+      <li>
+        Roll out the pastry on a floured surface to 5 mm (1/4 in) thick. Line
+        the tin with the pastry, then trim off the excess and form the scraps
+        into a ball to use for the lid.
+      </li>
+      <li>
+        Fill the pastry shell with half the pasta mixture. Scatter with the
+        wedges of boiled egg, and top with the remaining pasta.
+      </li>
+      <li>
+        Roll out the remaining pastry and cover the pie. Trim off the excess
+        pastry leaving a small border. Fold in and use a thumb to make
+        decorative indentations around the edge. Whisk the egg with the milk and
+        brush over the top of the timpana.
+      </li>
+      <li>
+        Bake in the oven for 45 minutes, then run a knife around the edge of the
+        pie, remove the springform sides and cook for another 15 minutes.
+      </li>
+    </ol>
   </body>
 </html>
