Add image to timpana.html
Used a relative path to link the timpana image to the recipe page. It is
located underneath the 'Timpana h1'.

--- a/recipes/timpana.html
+++ b/recipes/timpana.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Timpana</h1>
+    <img src="../images/timpana.jpg" width="300" />
     <p>
       Timpana is a traditional Maltese dish made by baking pasta in a rich meat
       sauce inside a shortcrust pastry.
