--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
       <li><a href="recipes/figolli.html">Figolli</a></li>
       <li><a href="recipes/pastizzi.html"> Pastizzi</a></li>
+      <li><a href="recipes/timpana.html"> Timpana</a></li>
     </ul>
   </body>
 </html>
