Add alt text to pastizzi img

--- a/recipes/pastizzi.html
+++ b/recipes/pastizzi.html
@@ -7,7 +7,11 @@
   </head>
   <body>
     <h1>Pastizzi</h1>
-    <img src="../images/pastizzi.jpg" width="300" />
+    <img
+      src="../images/pastizzi.jpg"
+      width="300"
+      alt="A plate of crispy pastizzi pastries filled with ricotta cheese."
+    />
     <p>
       Pastizzi (or, a singular pastizz) are small pastries made with a crispy,
       flaky dough and typically stuffed with fillings of ricotta cheese.
