Add alt text to Figolli image.

--- a/recipes/figolli.html
+++ b/recipes/figolli.html
@@ -7,7 +7,11 @@
   </head>
   <body>
     <h1>Figolli</h1>
-    <img src="../images/figolli.jpg" width="300" />
+    <img
+      src="../images/figolli.jpg"
+      width="300"
+      alt="A table spread with colourful, iced figolli biscuits and mini easter eggs"
+    />
     <p>
       Figolli are a small, sweet biscuit originating on the islands of Malta.
     </p>
