Added alt text to the Timpana image.

--- a/recipes/timpana.html
+++ b/recipes/timpana.html
@@ -7,7 +7,11 @@
   </head>
   <body>
     <h1>Timpana</h1>
-    <img src="../images/timpana.jpg" width="300" />
+    <img
+      src="../images/timpana.jpg"
+      width="300"
+      alt="A cross section showing the inside of a timapna pasta pie."
+    />
     <p>
       Timpana is a traditional Maltese dish made by baking pasta in a rich meat
       sauce inside a shortcrust pastry.
