Add home link to bottom of timpana page.
The relative link leads back to index.html

--- a/recipes/timpana.html
+++ b/recipes/timpana.html
@@ -105,5 +105,6 @@
         pie, remove the springform sides and cook for another 15 minutes.
       </li>
     </ol>
+    <a href="../index.html">Home</a>
   </body>
 </html>
