--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <h2>Here is a collection of a few of my favourite recipes!</h2>
+    <h2>
+      Here is a collection of a few of my favourite from the islands of Malta!
+    </h2>
     <ul>
       <li><a href="recipes/figolli.html">Figolli</a></li>
       <li><a href="recipes/pastizzi.html"> Pastizzi</a></li>
