Add image and alt text to index.html
Underneath the subheading, placed an image with descriptive alt text.

Alt text is required as it can be be view in the case the image cannot
be loaded, or if a user is using a screen reader, which will read out
the alt text to a vision impaird user.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <h2>
       Here is a collection of a few of my favourite from the islands of Malta!
     </h2>
+    <img
+      src="images/market.jpg"
+      width="400"
+      alt="A woman in relaxed clothing stands in front of a packed market stand and inspects assorted vegetables"
+    />
     <ul>
       <li><a href="recipes/figolli.html">Figolli</a></li>
       <li><a href="recipes/pastizzi.html"> Pastizzi</a></li>
